# CSC450-Module-Five-Critical-Thinking

./: CMakeLists.txt  CSC450_CT5_mod5.txt  Critical Thinking.docx  File.cpp  File.h  Input.cpp  Input.h  String.cpp  String.h  main.cpp  psuedocode.txt
